# turborepo

./: .gitignore  Cargo.toml  index.html  pnpm-lock.yaml
.github/actions/setup-mold/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: golangci-lint.yml  large-monorepo.yml  logging_playground.yml  turborepo-library-release.yml  turborepo-release-step-2.yml
Linux/: benchmark-data.json
benchmark/src/: index.ts
benchmarks/large-repo/Linux/: data.js
cli/: .gitignore  .goreleaser.yaml  Makefile  go.mod  go.sum
cli/cmd/turbo/: main.go
cli/internal/cache/: async_cache.go  cache.go  cache_fs.go  cache_http.go
cli/internal/config/: config.go  config_file.go
cli/internal/daemon/: daemon.go  turbo.pb.go  turbo.proto  turbo_grpc.pb.go
cli/internal/fs/: copy_file.go  hash.go  lockfile.go  path.go
cli/internal/login/: link.go  logout.go  unlink.go
cli/internal/run/: run.go  run_test.go
cli/lib/: turbo.h
cli/lib/turbo/: Cargo.toml
cli/lib/turbo/src/: lib.rs
crates/turborepo-filewatch/src/: lib.rs
crates/turborepo-lib/src/: cli.rs  shim.rs
crates/turborepo-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/turborepo-napi/src/: lib.rs
crates/turborepo-repository/src/package_manager/: mod.rs
daemon/turbocore/: Cargo.toml  build.rs
daemon/turbocore/src/: lib.rs
daemon/turbod/: Cargo.toml
daemon/turbod/src/: main.rs
examples/with-pnpm/: turbo.json
macOS/: benchmark-data.json
turborepo-tests/integration/tests/inference/: nested_workspaces.t
